--- a/MvcMusicStore/Web.config
+++ b/MvcMusicStore/Web.config
@@ -6,6 +6,7 @@
 
 <configuration>
   <appSettings>
+    <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
   </appSettings>
@@ -50,4 +51,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <connectionStrings>
+    <add name="MusicStoreEntities"
+     connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf"
+     providerName="System.Data.SqlServerCe.4.0"/>
+  </connectionStrings>
 </configuration>
